Details
-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.6.0 Beta1, 6.7.0 FF
-
None
-
1
-
2ae46ef08 (dev), c1f701d6a (6.5), 420bc17f4 (6.6)
-
QDS Oulu - 2023 Week 23/24
Description
-- [QtCharts] Running syncqt.cpp for module: QtChartsQml-- Configuring examples.CMake Error at qtbase/lib/cmake/Qt6Core/Qt6CoreMacros.cmake:603 (add_executable): add_executable cannot create target "gallery" because another target with the same name already exists. The existing target is an executable created in source directory "/home/qt/work/qt/qt5/qtbase/examples/widgets/gallery". See documentation for policy CMP0002 for more details.
Details: https://testresults.qt.io/coin/integration/qt/qt5/tasks/1691325480
Tested changes (refs/builds/qtci/6.6/1686253594):
https://codereview.qt-project.org/c/qt/qt5/+/483391/2 Update submodules on '6.6 in qt/qt5'