Rename gallery and qmlgallery examples as they are too generic

Gallery name conflicted with widgets example of same name.
New names are chartsgallery and qmlchartsgallery.

Fixes: QTBUG-114408
Change-Id: Iee9fdfa1f685685a4118fb9d401c1e53147546cb
Reviewed-by: Mahmoud Badri <mahmoud.badri@qt.io>
(cherry picked from commit 2ae46ef08f6a10a0d44557bb592db06be667f2bb)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>