examples/charts/qmlchartsgallery/qmlchartsgallery.pro
@@ -2,12 +2,12 @@ QT += charts qml quick
 
 SOURCES += main.cpp
 
-RESOURCES += qmlgallery.qrc
+RESOURCES += qmlchartsgallery.qrc
 
 DISTFILES += \
     qml/* \
     qml/customlegend/* \
     qml/f1legends/*
 
-target.path = $$[QT_INSTALL_EXAMPLES]/charts/qmlgallery
+target.path = $$[QT_INSTALL_EXAMPLES]/charts/qmlchartsgallery
 INSTALLS += target
